# haxconf

./: .gitignore  .gitmodules  install.conf.yaml  link.sh  packages.conf.yaml  packages.sh  readme.org  update.sh
cheats/: cpp.cheat  git.cheat  linux.cheat  network.cheat  pacman.cheat  systemd.cheat  test.cheat
cli/: cmus.rc  default.ctags  dict  gdb_config.gdbinit  kitty.conf  kitty.conf.rej  kitty_tab_bar.py  nanobash.sh  nanofish.fish  nanovim.vim  navi.yaml  ncmpcpp.conf  neonanovim.vim  neovim_init.vim  neovim_plugins.lua  rsnapshot.conf  starship.toml
config/: common_dirs.txt  dict  dict.rej  path_dirs.txt  tags  tags.rej
desktop/: awesome_autorun.sh  awesome_wm.lua  awesome_wm_client.lua  awesome_wm_clientkeys.lua  awesome_wm_globalkeys.lua  rofi  (+26 more)
scripts/: aichat_convert.py  backup.sh  backup_all.py  backup_all.sh  backup_repos.sh  bestshell.sh  capture_timelapse.sh  clearcache.sh  deck_controller.py  desktop-four-screen-config.sh  desktop-three-screen-config.sh  desktop-two-screen-config.sh  download_web_article.py  entr-space.sh  feh_randomize.py  ffmpeg_extract_mp3.sh  fix_file_dates.py  fix_recording.sh  fix_yaml.py  fixwacom.py  fixwacom.sh  fzf_copy.sh  fzf_wrap.sh  get-current-song.sh  get_window_list.lua  git_disallow_commit_to_master_or_develop.sh  git_utils.py  hax-asmfmt.sh  hax-htmlfmt.sh  hax_cmdlog_compact.py  hax_cmdlog_history_edit.py  hax_org_agenda.py  laptop-three-screen-config.sh  laptop-two-screen-config.sh  lldb_auto_debug_any.py  lldb_script.py  lldb_script.txt  move-current-song.sh  nimskull_Taskfile.yaml  ocr-clipboard-image.sh  (+27 more)
(+150 files in other folders)
