[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["haxscramper <haxscramper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"
newspaper3k = "^0.2.8"
ebooklib = "^0.18"
lxml-html-clean = "^0.1.1"
dominate = "^2.9.1"
nltk = "^3.8.1"
pillow = "^11.0.0"
streamdeck = "^0.9.7"
pip = "^25.2"
pyyaml = "^6.0.2"
pydantic = "^2.11.7"
pyautogui = "^0.9.54"
plumbum = "^1.9.0"
beartype = "^0.21.0"
markdown = "^3.10.1"
pygments = "^2.19.2"
ruamel-yaml = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
